--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,4 @@
+/* Basis */
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +6,7 @@
 body {
   background-color: #0d0c1d;
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 .container {
   position: absolute;
   left: 50%;
@@ -26,6 +28,7 @@ img {
 .typed-cursor {
   color: white;
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 .menu-icon{
     display:none;
 }
@@ -50,6 +53,7 @@ img {
 #list ul li a:hover {
   color: white;
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 .footer {
   color: white;
   position: absolute;
@@ -60,6 +64,7 @@ img {
 .copy {
   color: red;
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 @media (max-width: 768px) {
   .typed {
     font-size: 20px;
@@ -122,3 +127,4 @@ img {
     top: 50%;
   }
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
