--- a/style/main.css
+++ b/style/main.css
@@ -16,6 +16,7 @@ body {
   background-color: #0d0c1d;
   color: #f8f4f9;
 }
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 .main-container {
   height: 100vh;
   display: grid;
