--- a/style/migration.css
+++ b/style/migration.css
@@ -67,7 +67,7 @@ color: white;
 }
 @media (max-width: 1050px) {
   .container {
-    width: 100%;
+    width: fit-content;
     text-align: center;
   }
   .container h1 {
