--- a/style/migration.css
+++ b/style/migration.css
@@ -100,6 +100,8 @@ color: white;
 /* navmedia */
 @media (max-width: 768px) {
   #list {
+    position:relative;
+    z-index:1;
     display: none;
   }
   #list ul {
