--- a/style/home.css
+++ b/style/home.css
@@ -5,53 +5,173 @@
 }
 body {
   background-color: #0d0c1d;
+  overflow: hidden;
 }
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
-.container {
-  position: absolute;
-  left: 50%;
-  top: 60%;
-  transform: translate(-50%, -50%);
+.landing {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.logo {
+  position: relative;
 }
 img {
-  position: absolute;
-  margin-top: 70px;
   width: 600px;
-  left: 50%;
-  transform: translateX(-50%);
 }
+.logo::before,
+.logo::after {
+  content: "";
+  position: absolute;
+  width: 620px;
+  height: 620px;
+  border-radius: 50%;
+  top: 0;
+  right: -10px;
+  z-index: -1;
+}
+.logo::before {
+  border: solid 1px #272457;
+}
+.logo::after {
+  border: solid 1px #7c2af1;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  animation-name: rotation;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+}
+
 .typed {
+  position: relative;
+  top: 40%;
   display: inline;
   font-size: 60px;
   color: white;
 }
 .typed-cursor {
+  position: relative;
+  top: 40%;
+  font-size: 50px;
   color: white;
 }
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
-.menu-icon{
-    display:none;
+nav {
+  height: 10vh;
 }
-#list{
-    display: block;
-}
-#list ul {
+.icons {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  height: 70vh;
+  position: absolute;
+  justify-content: space-around;
+  top: 10%;
+  left: 50%;
+}
+.star {
+  font-size: 70px;
+}
+.star:nth-child(1) {
+  transform: rotate(45deg);
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 2.5s;
+}
+.star:nth-child(2) {
+  transform: rotate(-45deg);
+  animation-name: slide-2;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 3.5s;
+}
+.line {
+  width: 30px;
+  height: 3px;
+  background: white;
+  margin: 5px;
+}
+nav {
+  position: relative;
+}
+.hamburger {
+  position: absolute;
+  cursor: pointer;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  transition: 1s ease-out;
+}
+.container-big {
+  background: #7c2af1;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  clip-path: circle(500px at 50% -45%);
+  transition: all 1s ease-out;
+  pointer-events: none;
+  z-index: 1;
+}
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-direction: column;
   list-style: none;
-  margin-top: 50px;
-  margin-left: 100px;
+  height: 100vh;
 }
-#list ul li {
-  margin-left: 50px;
-  font-size: 22px;
-}
-#list ul li a {
-  color: #7c2af1;
+
+.nav-links li a {
   text-decoration: none;
-}
-#list ul li a:hover {
   color: white;
+  margin-left: 20%;
+  font-size: 25px;
+}
+
+.container-big.open {
+  clip-path: circle(1800px at 50% -45%);
+  pointer-events: all;
+}
+/* nav-fade */
+.nav-links li {
+  opacity: 0;
+}
+
+.nav-links li:nth-child(1) {
+  transition: all 0.5s ease 0.2s;
+}
+.nav-links li:nth-child(2) {
+  transition: all 0.5s ease 0.4s;
+}
+.nav-links li:nth-child(3) {
+  transition: all 0.5s ease 0.6s;
+}
+.nav-links li:nth-child(4) {
+  transition: all 0.5s ease 0.8s;
+}
+.nav-links li:nth-child(5) {
+  transition: all 0.5s ease 1s;
+}
+li.fade {
+  opacity: 1;
+}
+/* icon-fade */
+.icons .star {
+  opacity: 0;
+}
+.icons .star:nth-child(1) {
+  transition: all 0.5s ease 0.4s;
+}
+.icons .star:nth-child(2) {
+  transition: all 0.5s ease 0.8s;
+}
+.star.blink {
+  opacity: 1;
 }
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
 .footer {
@@ -65,66 +185,107 @@ img {
   color: red;
 }
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
+@media (max-width: 1460px) {
+  .typed {
+    font-size: 40px;
+  }
+}
+@media (max-width: 1240px) {
+  img {
+    width: 530px;
+  }
+  .logo::before,
+  .logo::after {
+    width: 540px;
+    height: 540px;
+  }
+}
 @media (max-width: 768px) {
   .typed {
     font-size: 20px;
   }
-  #list {
-    display: none;
-  }
-  #list ul {
-    background: #151630;
-    flex-direction: column;
-    margin-top: 0;
+  .nav-links {
     align-items: center;
   }
-  #list ul li {
-    margin-left: 0 !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    width: 100%;
-    text-align: center;
+  .nav-links li a {
+    font-size: 20px;
+    margin-left: 0;
+    margin-top: 50px;
   }
-  #list ul li:hover {
-    cursor: pointer;
-    background: #7c2af1;
-  }
-  #list ul li:hover a {
-    color: white;
-  }
-  .menu-icon{
-      display:block;
-      height: 48px;
-      background:#7c2af1;
-      cursor: pointer;
-      color: white;
-      font-size:24px;
-      text-align: center;
-      line-height:2em;
-      text-transform: uppercase;
+  .star {
+    display: none;
   }
 }
 @media (max-width: 990px) {
-  #list ul {
-    margin-left: 0;
-  }
-  #list ul li {
-    margin-left: 40px;
-    font-size: 18px;
-  }
   .typed {
     font-size: 30px;
   }
   img {
     width: 500px;
   }
+  .logo::before,
+  .logo::after {
+    width: 520px;
+    height: 520px;
+    right: 20px;
+    top: 90px;
+  }
 }
 @media (max-width: 768px) {
-  img {
-    display: none;
+  .landing {
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    justify-content: space-evenly;
   }
-  .container {
-    top: 50%;
+  img {
+    width: 250px;
+  }
+  .logo::before,
+  .logo::after {
+    position: absolute;
+    width: 270px;
+    height: 270px;
+    top: 0;
+    right: -10px;
+  }
+  .typed {
+    font-size: 20px;
+  }
+}
+@media (max-width: 558px) {
+  .container-big {
+    clip-path: circle(500px at 50% -58%);
+  }
+}
+@keyframes slide {
+  0% {
+    transform: rotate(45deg);
+  }
+  50% {
+    transform: rotate(45deg) translateY(20px);
+  }
+  100% {
+    transform: rotate(45deg) translateY(0);
+  }
+}
+@keyframes slide-2 {
+  0% {
+    transform: rotate(-45deg);
+  }
+  50% {
+    transform: rotate(-45deg) translateY(-20px);
+  }
+  100% {
+    transform: rotate(-45deg) translateY(0);
+  }
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(1turn);
   }
 }
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
