--- a/style/migration.css
+++ b/style/migration.css
@@ -7,29 +7,120 @@ body {
   overflow: hidden;
 }
 /* Navbar */
-.menu-icon{
-  display:none;
+nav {
+  height: 10vh;
 }
-#list{
-  display: block;
+.icons {
+  display: flex;
+  flex-direction: column;
+  height: 70vh;
+  position: absolute;
+  justify-content: space-around;
+  top: 10%;
+  left: 50%;
 }
-#list ul {
-display: flex;
-flex-direction: row;
-list-style: none;
-margin-top: 50px;
-margin-left: 100px;
+.star {
+  font-size: 70px;
 }
-#list ul li {
-margin-left: 50px;
-font-size: 22px;
+.star:nth-child(1) {
+  transform: rotate(45deg);
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 2.5s;
 }
-#list ul li a {
-color: #7c2af1;
-text-decoration: none;
+.star:nth-child(2) {
+  transform: rotate(-45deg);
+  animation-name: slide-2;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 3.5s;
 }
-#list ul li a:hover {
-color: white;
+.line {
+  width: 30px;
+  height: 3px;
+  background: white;
+  margin: 5px;
+}
+nav {
+  position: relative;
+}
+.hamburger {
+  position: absolute;
+  cursor: pointer;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  transition: 1s ease-out;
+}
+.container-big {
+  background: #7c2af1;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  clip-path: circle(500px at 50% -45%);
+  transition: all 1s ease-out;
+  pointer-events: none;
+  z-index: 1;
+}
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-direction: column;
+  list-style: none;
+  height: 100vh;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: white;
+  margin-left: 20%;
+  font-size: 25px;
+}
+
+.container-big.open {
+  clip-path: circle(1800px at 50% -45%);
+  pointer-events: all;
+}
+/* nav-fade */
+.nav-links li {
+  opacity: 0;
+}
+
+.nav-links li:nth-child(1) {
+  transition: all 0.5s ease 0.2s;
+}
+.nav-links li:nth-child(2) {
+  transition: all 0.5s ease 0.4s;
+}
+.nav-links li:nth-child(3) {
+  transition: all 0.5s ease 0.6s;
+}
+.nav-links li:nth-child(4) {
+  transition: all 0.5s ease 0.8s;
+}
+.nav-links li:nth-child(5) {
+  transition: all 0.5s ease 1s;
+}
+li.fade {
+  opacity: 1;
+}
+/* icon-fade */
+.icons .star {
+  opacity: 0;
+}
+.icons .star:nth-child(1) {
+  transition: all 0.5s ease 0.4s;
+}
+.icons .star:nth-child(2) {
+  transition: all 0.5s ease 0.8s;
+}
+.star.blink {
+  opacity: 1;
 }
 /*----------------------------------------------------------------*/
 .container {
@@ -86,6 +177,26 @@ color: white;
 }
 /*----------------------------*/
 
+/* navmedia */
+@media (max-width: 768px) {
+  .nav-links {
+    align-items: center;
+  }
+  .nav-links li a {
+    font-size: 20px;
+    margin-left: 0;
+    margin-top: 50px;
+  }
+  .star {
+    display: none;
+  }
+}
+@media (max-width: 558px) {
+  .container-big {
+    clip-path: circle(500px at 50% -58%);
+  }
+}
+/* animation */
 @keyframes blink {
   0% {
     opacity: 0;
@@ -97,49 +208,27 @@ color: white;
     opacity: 0;
   }
 }
-/* navmedia */
-@media (max-width: 768px) {
-  #list {
-    display: none;
+@keyframes slide {
+  0%{
+    transform:rotate(45deg);
   }
-  #list ul {
-    background: #151630;
-    flex-direction: column;
-    margin-top: 0;
-    align-items: center;
+  50% {
+    transform: rotate(45deg) translateY(20px);
+    
   }
-  #list ul li {
-    margin-left: 0 !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    width: 100%;
-    text-align: center;
-  }
-  #list ul li:hover {
-    cursor: pointer;
-    background: #7c2af1;
-  }
-  #list ul li:hover a {
-    color: white;
-  }
-  .menu-icon{
-      display:block;
-      height: 48px;
-      background:#7c2af1;
-      cursor: pointer;
-      color: white;
-      font-size:24px;
-      text-align: center;
-      line-height:2em;
-      text-transform: uppercase;
+  100% {
+    transform:rotate(45deg) translateY(0)
   }
 }
-@media (max-width: 990px) {
-  #list ul {
-    margin-left: 0;
+@keyframes slide-2 {
+  0%{
+    transform:rotate(-45deg);
   }
-  #list ul li {
-    margin-left: 40px;
-    font-size: 18px;
+  50% {
+    transform: rotate(-45deg) translateY(-20px);
+    
+  }
+  100% {
+    transform:rotate(-45deg) translateY(0)
   }
 }
